Updated to Java 16 .toList() from .collect(Collectors.toList())